src/openshift/cve-console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cve-console
spec:
  selector:
    app: cve-console
  ports:
    - name: http
      port: 8787
      targetPort: 8787
