src/openshift/cve-console/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cve-console
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  to:
    kind: Service
    name: cve-console
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
